# CP-Quadruped-Control

./: .gitignore  CL_router_start.sh  CL_startup.sh  CLdev.sh  CLnew.sh  README.md  acados_ocp.json  routerconfig.json5  tune_ctrl.sh
.devcontainer/: Dockerfile  devcontainer.json
bags/rosbag2_2025_06_03-14_58_12/: metadata.yaml  rosbag2_2025_06_03-14_58_12_0.mcap
bags/rosbag2_2025_06_03-14_59_42/: metadata.yaml
bags/rosbag2_2025_06_03-15_00_26/: metadata.yaml  rosbag2_2025_06_03-15_00_26_0.mcap
bags/rosbag2_2025_06_03-15_01_28/: metadata.yaml
log/: latest_build
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: imu_node.cpp  readUSB.cpp
src/da graveyard/: MujocoHardwareInterface.cpp  MujocoHardwareInterface.hpp  MujocoHardwareInterface.xml  QuadrupedHardwareInterface.cpp  QuadrupedHardwareInterface.hpp
src/my_package/: package.xml
src/py_pubsub/: package.xml
src/quadruped/: CMakeLists.txt  plugin_description.xml
src/quadruped/config/: initial_joint_positions.yaml  quadruped.rviz  quadruped_controllers.yaml
src/quadruped/include/quadruped/: balance_controller.hpp  foot_trajectory_generator.hpp  leg_controller.hpp  state_estimator.hpp
src/quadruped/launch/: controllers.launch.py  gazebo_sim.launch.py
src/quadruped/messages/: RobotState.msg
src/quadruped/scripts/: GaitPatternGenerator.py  LegController.py  StateEstimator.py  gait_pattern_class.py  leg_class.py
src/quadruped/src/: balance_controller.cpp  foot_trajectory_generator.cpp  leg_controller.cpp  state_estimator.cpp
src/quadruped/urdf/: mjb_maker.py
src/quadruped_hardware/: CMakeLists.txt  package.xml  quadruped_hardware.xml  ros2BNO08X_Description.xml  ros2CANInterface_Description.xml  ros2CANMotor_Description.xml  ros2_Cantester.xml  ros2_control_config.xml
src/quadruped_hardware/config/: quadruped_hardware.yaml  ros2_control_config.yaml
src/quadruped_hardware/include/quadruped_hardware/: Adafruit_BNO08x.h  CANInterface.hpp  CANMotor_ROS2.hpp  CANtester.hpp  CustomCommandInterface.hpp  CustomStateInterface.hpp  MotorDriver.hpp  ROS2_BNO08x.h  ROS2_BNO08x.hpp  ROS2_CAN_Interface.hpp  ROS2_CAN_Motor.hpp  bno08x.hpp  bno08x_driver.h  bno_HAL.hpp  i2c_device.hpp  jetsonHal.hpp  quadruped_hardware.hpp
src/quadruped_hardware/include/quadruped_hardware/BNO08x/: Adafruit_BNO08x.cpp  Adafruit_BusIO_Register.h  Adafruit_GenericDevice.h  Adafruit_I2CDevice.h  Adafruit_SPIDevice.cpp  Adafruit_SPIDevice.h
src/quadruped_hardware/launch/: can_interface.launch.py  controller_manager.launch.py  real_quadruped_hardware.launch.py
src/quadruped_hardware/src/: Adafruit_BNO08x.cpp  CANInterface.cpp  CANMotor_ROS2.cpp  CANtester.cpp  MotorDriver.cpp  ROS2_BNO08x.cpp  ROS2_BNO08xX.cpp  ROS2_CAN_Interface copy.cpp  ROS2_CAN_Interface.cpp  ROS2_CAN_Motor.cpp  StateBroadcaster.cpp  ZeroController.cpp  bno08x.cpp  bno08x_driver.cpp  bno_HAL.cpp  euler.c  i2c_device.cpp  i2c_tools.cpp  jetsonHal.cpp  quadruped_hardware.cpp  sh2.c  sh2_util.c  shtp.c  test_sensor.cpp
src/quadruped_mpc/: CMakeLists.txt  acados_ocp.json  package.xml  plugin_description.xml
src/quadruped_mpc/acados_generated/: Makefile  acados_sim_solver_quadruped_ode.c  acados_sim_solver_quadruped_ode.h  acados_solver_quadruped_ode.h
src/quadruped_mpc/acados_generated/quadruped_ode_model/: acados_c_types.h  quadruped_ode_expl_vde_adj.c
src/quadruped_mpc/cmake/: Findacados.cmake
src/quadruped_mpc/config/: acados_ocp.json  optimal_controller.yaml  quadruped_controllers.yaml
src/quadruped_mpc/include/quadruped_mpc/: balance_controller.hpp  leg_controller.hpp
src/quadruped_mpc/include/quadruped_mpc/acados_generated/: Makefile  acados_sim_solver_quadruped_ode.c  acados_sim_solver_quadruped_ode.h  acados_solver_quadruped_ode.c  acados_solver_quadruped_ode.h  main_quadruped_ode.c  main_sim_quadruped_ode.c
src/quadruped_mpc/include/quadruped_mpc/acados_generated/quadruped_ode_model/: quadruped_ode_expl_ode_fun.c  quadruped_ode_expl_vde_adj.c  quadruped_ode_expl_vde_forw.c
src/quadruped_mpc/include/quadruped_mpc/control_laws/: BalanceControl.hpp  FootControl.hpp  GaitPatternGenerator.hpp  StateEstimation.hpp  balance_control.hpp  balance_controller.hpp  state_estimation.hpp
src/quadruped_mpc/include/quadruped_mpc/controller_interfaces/: balance_controller.hpp  foot_controller.hpp  gait_pattern_generator.hpp  quadruped_broadcaster.hpp  state_estimator.hpp
src/quadruped_mpc/include/quadruped_mpc/utilities/: shared_quadruped_info.hpp
src/quadruped_mpc/launch/: mpc.launch.py
src/quadruped_mpc/scripts/: quadruped_teleop.py
src/quadruped_mpc/scripts/acados/: acados_ocp.json  generate_controller.py  optimal_controller.py  quadruped_model.py  test_optimal_controller.py
src/quadruped_mpc/scripts/acados/logs/: simulation_data_20250108_165033.npz
src/quadruped_mpc/scripts/acados_generated/: Makefile  acados_solver_quadruped_ode.c
src/quadruped_mpc/scripts/acados_generated/quadruped_ode_model/: quadruped_ode_expl_ode_fun.c  quadruped_ode_expl_vde_forw.c
src/quadruped_mpc/src/: balance_controller.cpp  foot_trajectory_generator.cpp  leg_controller.cpp  state_estimator.cpp
src/quadruped_mpc/src/acados_controller/: acados_controller.cpp
src/quadruped_mpc/src/control_laws/: balance_controller.cpp
src/quadruped_mpc/src/controller_interfaces/: balance_controller.cpp  foot_controller.cpp  gait_pattern_generator.cpp  quadruped_broadcaster.cpp  state_estimator.cpp
src/quadruped_mpc/src/utilities/: shared_quadruped_info.cpp
src/quadruped_msgs/: CMakeLists.txt
src/quadruped_utils/: CMakeLists.txt
src/quadruped_utils/config/: controller.yaml
src/quadruped_utils/include/quadruped_utils/: StaticJointsController.hpp  ZeroJointsController.hpp
src/quadruped_utils/launch/: testcontroller.launch.py
src/quadruped_utils/src/: StaticJointsController.cpp  ZeroJoint.cpp  ZeroJointsController copy.cpp  ZeroJointsController.cpp  ZeroJointsControllerSTINKY.cpp
src/ros2_bno08x/: CMakeLists.txt  package.xml
zenoh-plugin-ros2dds-1.3.3-aarch64-unknown-linux-gnu-debian/: zenoh-plugin-ros2dds_1.3.3_arm64.deb
(+200 files in other folders)
